--- a/resume_parser/requirements.txt
+++ b/resume_parser/requirements.txt
@@ -19,7 +19,7 @@ djangorestframework==3.9.3
 doc2text==0.2.4
 docx2txt==0.6
 EbookLib==0.15
-en-core-web-sm==2.0.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.0.0/en_core_web_sm-2.0.0.tar.gz#egg=en_core_web_sm
 future==0.17.1
 gast==0.2.2
 grpcio==1.19.0
@@ -44,7 +44,7 @@ murmurhash==1.0.1
 networkx==2.2
 nltk==3.4
 numpy==1.15.4
-object-detection==0.1
+object-detection-0.1==0.1
 pandas==0.23.4
 parso==0.3.4
 pbr==5.1.3
@@ -60,7 +60,6 @@ protobuf==3.7.0
 ptyprocess==0.6.0
 pycryptodome==3.7.0
 Pygments==2.3.1
-PyMuPDF==1.14.10
 pyparsing==2.3.0
 PyPDF2==1.26.0
 pyspellchecker==0.4.0
@@ -72,6 +71,7 @@ python-pptx==0.6.5
 pytz==2018.7
 PyWavelets==1.0.2
 PyYAML==3.13
+PyMuPDF==1.14.10
 regex==2018.1.10
 requests==2.20.1
 scikit-image==0.14.2
